<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Do-It List</string>
    <string name="action_quit">Quit</string>
    <string name="add_button">+</string>
    <string name="create_doittask_hint">Enter your text here.</string>
    <string name="button_ok">Okay</string>
    <string name="create_doittask_heading">Create a new Task</string>
    <string name="update_doittask_heading">Update Task</string>
    <string name="update_list_item_heading">Update List Item</string>
    <string name="update_list_name_heading">Update List Name</string>
    <string name="main_doittask_heading">My Tasks:</string>
    <string name="lesser_than">&lt;</string>
    <string name="greater_than">&gt;</string>
    <string name="today">TODAY</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Select None</string>
    <string name="list_menu_heading">List Management</string>
    <string name="button_create_list">Create new List</string>
    <string name="button_create_list_item">Create new Item</string>
    <string name="button_add_list_entries">Add List Entries</string>
    <string name="create_list_heading">Create List</string>
    <string name="show_list_heading">Manage List</string>
    <string name="create_list_item_heading">Create New List Item</string>
    <string name="delete_list">Delete List</string>
    <string name="show_list_added">Items added on </string>
    <string name="all">ALL</string>

</resources>